--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
     <div class="navbar navbar-fixed-bottom">
         <div class="row">
             <div class="col-md-6 text-center col-md-offset-3">
-                <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-                <button class="btn btn-primary" id="play">Play Music</button>
-                <button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-                <button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-                <button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-                <button class="btn btn-primary" id="light_candle"> Light Candle</button>
+                <button class="btn btn-primary" id="turn_on">Schalten Sie das Licht ein</button>
+                <button class="btn btn-primary" id="play">Musik abspielen</button>
+                <button class="btn btn-primary" id="bannar_coming">Lass uns dekorieren</button>
+                <button class="btn btn-primary" id="balloons_flying">Mit Ballons fliegen</button>
+                <button class="btn btn-primary" id="cake_fadein">Der leckerste Kuchen aller Zeiten</button>
+                <button class="btn btn-primary" id="light_candle"> Kerze anzünden</button>
                 <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-                <button class="btn btn-primary" id="story">A mesage for you</button>
-                <!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
+                <button class="btn btn-primary" id="story">Eine Nachricht für Sie</button>
+                <!-- <button class="btn btn-primary" id="cake_cut">Lass uns den Kuchen schneiden</button> -->
             </div>
         </div>
     </div>
